# yml-assembler

./: .gitignore  Cargo.toml  Makefile.toml  README.md  memo.md
src/: adapters.rs  lib.rs  main.rs
src/aggregator/: mod.rs
src/lib_infras/: assembly_fs_output.rs  assembly_in_memory_output.rs  assembly_part_fs_reader.rs  mod.rs  schema_fs_output.rs  schema_fs_reader.rs  schema_in_memory_output.rs
src/mixins/: inject.rs  mod.rs  trim.rs
src/transformable/: from_to_value.rs  mod.rs  transformation.rs
src/utils/: result.rs
src/variables/: from_value.rs  inject.rs  mod.rs
tests/: cli.rs  deep_replace_variables.rs  glob_pattern.rs  labeled_transform.rs  load_from_cache.rs  mix_in_existing_key.rs  null_values.rs  simple_book.rs
tests/test_infra/: mod.rs
tests/yml_test_files/: book-schema.json  book-schema.yml  deep_replace_variables.pyml  labeled_transform.pyml  load_from_cache.pyml  mix_in_existing_key.pyml  null_values.pyml  simple_book.pyml  simple_book.yml
tests/yml_test_files/chapters/: next.pyml  previous.pyml
tests/yml_test_files/glob/: entry_b.pyml
tests/yml_test_files/other/: other1.pyml  other2.pyml  other3.pyml
tests/yml_test_files/stories/: birthday.pyml  car_crash.pyml
tests/yml_test_files/tags/: adult.pyml  horror.pyml  investigation.pyml
