[package]
name = "yml_assembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
anyhow = "1.0.75"
evalexpr = "11.1.0"
serde_json = "1.0.105"
jsonschema = "0.17.1"
clap = "4.4.2"
regex = "1.9.5"
glob = "0.3.1"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"
serial_test = "2.0.0"

